--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
+    <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    
     <div class="calculadora">
         
         <div class="pantalla">0</div>
@@ -54,5 +56,7 @@
 
 
     </div>
+    <script src= "./js/main.js"></script>
+
 </body>
 </html>
